--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
 
 <body>
     <div class="main-container">
-
-        
         <!-- Additon ++ -->
-        <div class="sub-container">
+        <div class="sub-container" id="sub-container1">
             <h1>Addition ++</h1>
             <p class="mandetory">Only numbers are allowed.</p>
             <!-- ValueContainers -->
@@ -35,7 +33,7 @@
         </div>
 
         <!-- Multiplication-->
-        <div class="sub-container">
+        <div class="sub-container" id="sub-container2">
             <h1>Multiplication **</h1>
             <p class="mandetory">Only numbers are allowed.</p>
             <!-- ValueContainers -->
@@ -50,7 +48,7 @@
         </div>
 
         <!-- Division -->
-        <div class="sub-container">
+        <div class="sub-container" id="sub-container3">
             <h1> Division /</h1>
             <p class="mandetory">Only numbers are allowed.</p>
             <!-- ValueContainers -->
@@ -66,7 +64,7 @@
 
 
         <!-- Subtraction -->
-        <div class="sub-container">
+        <div class="sub-container" id="sub-container4">
             <h1> Subtraction &#8722;</h1>
             <p class="mandetory">Only numbers are allowed.</p>
             <!-- ValueContainers -->
@@ -82,7 +80,7 @@
 
 
         <!-- Greater Than -->
-        <div class="sub-container">
+        <div class="sub-container" id="sub-container5">
             <h1> Greater >></h1>
             <p class="mandetory">Numbers and Strings both are allowed.</p>
             <!-- ValueContainers -->
@@ -98,7 +96,7 @@
 
 
         <!-- Module -->
-        <div class="sub-container">
+        <div class="sub-container" id="sub-container6">
             <h1>Remainder</h1>
             <p class="mandetory">Only numbers are allowed.</p>
             <!-- ValueContainers -->
